// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`docs generate should accept pages it just wrote 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "CLI documentation in <sandbox>/docs is up to date (15 pages)",
  ],
}
`;

exports[`docs generate should generate a page per command group 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Generated 15 documentation pages in <sandbox>/docs",
  ],
}
`;

exports[`docs generate should list every group and command in the index 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# XRF CLI command reference",
  "",
  "Reference for \`xrf-cli\` subcommands, generated from the clap command definitions. This directory is fully generated: rebuild it with \`cargo make docs-cli\` instead of editing pages.",
  "",
  "<!-- ANCHOR: groups -->",
  "",
  "| Group | Commands |",
  "| ----- | -------- |",
  "| [Archive](archive.md) | [\`archive extract\`](archive.md#extract), [\`archive find\`](archive.md#find), [\`archive info\`](archive.md#info), [\`archive list\`](archive.md#list), [\`archive pack\`](archive.md#pack), [\`archive unpack\`](archive.md#unpack), [\`archive verify\`](archive.md#verify) |",
  "| [Dialog](dialog.md) | [\`dialog parse\`](dialog.md#parse) |",
  "| [Docs](docs.md) | [\`docs generate\`](docs.md#generate) |",
  "| [Externs](externs.md) | [\`externs export\`](externs.md#export) |",
  "| [Gamedata](gamedata.md) | [\`gamedata list\`](gamedata.md#list), [\`gamedata verify\`](gamedata.md#verify) |",
  "| [LTX](ltx.md) | [\`ltx format\`](ltx.md#format), [\`ltx verify\`](ltx.md#verify) |",
  "| [OGF](ogf.md) | [\`ogf info\`](ogf.md#info), [\`ogf patch-motion-refs\`](ogf.md#patch-motion-refs), [\`ogf patch-texture-refs\`](ogf.md#patch-texture-refs), [\`ogf verify\`](ogf.md#verify) |",
  "| [OMF](omf.md) | [\`omf duplicate-motion\`](omf.md#duplicate-motion), [\`omf filter-motions\`](omf.md#filter-motions), [\`omf info\`](omf.md#info), [\`omf rename-motions\`](omf.md#rename-motions), [\`omf repack\`](omf.md#repack) |",
  "| [Particle](particle.md) | [\`particle info\`](particle.md#info), [\`particle pack\`](particle.md#pack), [\`particle repack\`](particle.md#repack), [\`particle re-unpack\`](particle.md#re-unpack), [\`particle unpack\`](particle.md#unpack), [\`particle verify\`](particle.md#verify) |",
  "| [Profile](profile.md) | [\`profile run\`](profile.md#run) |",
  "| [Spawn](spawn.md) | [\`spawn info\`](spawn.md#info), [\`spawn pack\`](spawn.md#pack), [\`spawn repack\`](spawn.md#repack), [\`spawn unpack\`](spawn.md#unpack), [\`spawn verify\`](spawn.md#verify) |",
  "| [Texture](texture.md) | [\`texture crop-dds\`](texture.md#crop-dds), [\`texture info-dds\`](texture.md#info-dds), [\`texture pack-equipment-icons\`](texture.md#pack-equipment-icons), [\`texture pack-texture-description\`](texture.md#pack-texture-description), [\`texture unpack-equipment-icons\`](texture.md#unpack-equipment-icons), [\`texture unpack-texture-description\`](texture.md#unpack-texture-description), [\`texture verify-equipment-icons\`](texture.md#verify-equipment-icons) |",
  "| [THM](thm.md) | [\`thm patch-bump\`](thm.md#patch-bump) |",
  "| [Translation](translation.md) | [\`translation build\`](translation.md#build), [\`translation initialize\`](translation.md#initialize), [\`translation parse\`](translation.md#parse), [\`translation verify\`](translation.md#verify) |",
  "",
  "<!-- ANCHOR_END: groups -->",
]
`;

exports[`docs generate should reject pages that drifted 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "CLI documentation in <sandbox>/drifted is stale, regenerate it with 'xrf-cli docs generate':",
    "  outdated: README.md",
    "  missing: archive.md",
    "  missing: dialog.md",
    "  missing: docs.md",
    "  missing: externs.md",
    "  missing: gamedata.md",
    "  missing: ltx.md",
    "  missing: ogf.md",
    "  missing: omf.md",
    "  missing: particle.md",
    "  missing: profile.md",
    "  missing: spawn.md",
    "  missing: texture.md",
    "  missing: thm.md",
    "  missing: translation.md",
    "Check failed: 15 finding(s)",
  ],
  "stdout": [],
}
`;

exports[`docs generate should render archive.md 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# Archive commands",
  "",
  "<!-- ANCHOR: commands -->",
  "",
  "## \`xrf-cli archive extract\`",
  "",
  "Extract one archive file or directory without unpacking the complete set",
  "",
  "\`\`\`txt",
  "xrf-cli archive extract [OPTIONS] --path <path> --dest <dest>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to an archive volume or a directory containing volumes |",
  "| \`--file <file>\` |  |  | Exact logical path of one archive file; --dest is the output file |",
  "| \`--directory <directory>\` |  |  | Logical directory to extract; --dest receives that directory's contents |",
  "| \`-d, --dest <dest>\` | yes |  | Output file for --file, or output directory for --directory |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli archive find\`",
  "",
  "Find archive entries whose logical path contains text",
  "",
  "\`\`\`txt",
  "xrf-cli archive find [OPTIONS] --path <path> --query <query>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to an archive volume or a directory containing volumes |",
  "| \`-q, --query <query>\` | yes |  | Case-insensitive text to find in an entry's logical path |",
  "| \`--files\` |  |  | Search files only, excluding directory records |",
  "| \`--directories\` |  |  | Search directory records only, excluding files |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli archive info\`",
  "",
  "Describe an X-Ray archive volume or volume set",
  "",
  "\`\`\`txt",
  "xrf-cli archive info [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to an archive volume or a directory containing volumes |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli archive list\`",
  "",
  "List the merged entries in an X-Ray archive volume or volume set",
  "",
  "\`\`\`txt",
  "xrf-cli archive list [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to an archive volume or a directory containing volumes |",
  "| \`--files\` |  |  | List files only, excluding directory records |",
  "| \`--directories\` |  |  | List directory records only, excluding files |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli archive pack\`",
  "",
  "Command to pack provided directory into *.db archive volumes",
  "",
  "\`\`\`txt",
  "xrf-cli archive pack [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to the directory to pack, normally a gamedata root |",
  "| \`-d, --dest <dest>\` |  | \`packed\` | Path to folder for writing the volumes |",
  "| \`-n, --name <name>\` |  | \`gamedata\` | Base name of the volumes, written as &lt;name&gt;.db0, &lt;name&gt;.db1 and so on |",
  "| \`--ltx <ltx>\` |  |  | Path to an xrCompress configuration LTX describing what to include |",
  "| \`--store\` |  |  | Store every file instead of compressing what the engine expects compressed |",
  "| \`--max-size <max-size>\` |  |  | Maximum volume size in megabytes |",
  "| \`--xdb\` |  |  | Write volumes with the xdb extension |",
  "| \`--no-skip-list\` |  |  | Keep editor and source leftovers the engine build normally drops |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli archive unpack\`",
  "",
  "Command to unpack provided *.db into separate files",
  "",
  "\`\`\`txt",
  "xrf-cli archive unpack [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to *.db file |",
  "| \`-d, --dest <dest>\` |  | \`unpacked\` | Path to folder for exporting |",
  "| \`--parallel <parallel>\` |  |  | Count of parallel threads for unpack, defaulting to the host's available parallelism |",
  "| \`--dry\` |  |  | Run in dry mode without actually unpacking to disk |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli archive verify\`",
  "",
  "Read every archive payload and verify decompression and CRC checks",
  "",
  "\`\`\`txt",
  "xrf-cli archive verify [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to an archive volume or a directory containing volumes |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "<!-- ANCHOR_END: commands -->",
]
`;

exports[`docs generate should render dialog.md 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# Dialog commands",
  "",
  "<!-- ANCHOR: commands -->",
  "",
  "## \`xrf-cli dialog parse\`",
  "",
  "Command to read dialog xml and report what it holds",
  "",
  "\`\`\`txt",
  "xrf-cli dialog parse [OPTIONS] --path <path>...",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>...\` | yes |  | Root holding dialog xml. Repeat to layer roots, highest priority first |",
  "| \`--source <source>\` |  | \`containing-installation\` | How to read the path: auto treats it as an installation only when it declares one, directory ignores any declaration, installation requires one, containing-installation searches parent directories for one. Possible values: \`auto\`, \`directory\`, \`installation\`, \`containing-installation\`. |",
  "| \`--prefix <prefix>\` |  |  | Limit to one logical subtree, such as configs\\gameplay |",
  "| \`--strict\` |  |  | Answer with a check failure when anything was unreadable or off schema |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "<!-- ANCHOR_END: commands -->",
]
`;

exports[`docs generate should render docs.md 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# Docs commands",
  "",
  "<!-- ANCHOR: commands -->",
  "",
  "## \`xrf-cli docs generate\`",
  "",
  "Command to generate markdown reference for all CLI commands",
  "",
  "\`\`\`txt",
  "xrf-cli docs generate [OPTIONS] --output <output>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-o, --output <output>\` | yes |  | Path to fully generated documentation directory |",
  "| \`-c, --check\` |  |  | Verify existing documentation is up to date instead of writing it |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "<!-- ANCHOR_END: commands -->",
]
`;

exports[`docs generate should render externs.md 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# Externs commands",
  "",
  "<!-- ANCHOR: commands -->",
  "",
  "## \`xrf-cli externs export\`",
  "",
  "Export TypeScript extern declarations as JSON, XML, or HTML",
  "",
  "\`\`\`txt",
  "xrf-cli externs export [OPTIONS] <declarations-root>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`<declarations-root>\` | yes |  | Root directory containing TypeScript declaration sources |",
  "| \`--format <format>\` |  |  | Output format; required with --output and inferred from --check when omitted. Possible values: \`json\`, \`xml\`, \`html\`. |",
  "| \`--output <output>\` |  |  | Artifact to create or replace |",
  "| \`--check <check>\` |  |  | Existing artifact to verify without writing |",
  "| \`--line-endings <line-endings>\` |  |  | Override generated line endings. Possible values: \`lf\`, \`crlf\`. |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "<!-- ANCHOR_END: commands -->",
]
`;

exports[`docs generate should render gamedata.md 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# Gamedata commands",
  "",
  "<!-- ANCHOR: commands -->",
  "",
  "## \`xrf-cli gamedata list\`",
  "",
  "List assets resolved by an installation or gamedata tree",
  "",
  "\`\`\`txt",
  "xrf-cli gamedata list [OPTIONS] --path <path>...",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>...\` | yes |  | Path to a game installation or a gamedata tree |",
  "| \`--source <source>\` |  | \`containing-installation\` | How to read the path: auto treats it as an installation only when it declares one, directory ignores any declaration, installation requires one, containing-installation searches parent directories for one. Possible values: \`auto\`, \`directory\`, \`installation\`, \`containing-installation\`. |",
  "| \`--prefix <prefix>\` |  |  | Limit to one logical subtree, such as configs or textures\\wpn |",
  "| \`-i, --ignore <ignore>...\` |  |  | Logical prefixes the directory mounts omit, such as textures\\wip |",
  "| \`--loose\` |  |  | List only loose files, ignoring archived entries |",
  "| \`--shadowed\` |  |  | Also report entries hidden by a higher-priority mount |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli gamedata verify\`",
  "",
  "Command to verify gamedata",
  "",
  "\`\`\`txt",
  "xrf-cli gamedata verify [OPTIONS] <ROOT>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`<ROOT>\` | yes |  | Path to assembled gamedata root |",
  "| \`-i, --ignore <ignore>...\` |  |  | Ignored assets in the gamedata root. Accepts multiple values separated by \`,\`. |",
  "| \`--checks <checks>...\` |  |  | List of checks to perform. Accepts multiple values separated by \`,\`. |",
  "| \`--strict\` |  |  | Fully validate expensive asset payloads |",
  "| \`--trace-reads\` |  |  | Account for every asset read, reporting redundancy against unique paths |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "<!-- ANCHOR_END: commands -->",
]
`;

exports[`docs generate should render ltx.md 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# LTX commands",
  "",
  "<!-- ANCHOR: commands -->",
  "",
  "## \`xrf-cli ltx format\`",
  "",
  "Command to format ltx and ini files",
  "",
  "\`\`\`txt",
  "xrf-cli ltx format [OPTIONS] --path <path>...",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>...\` | yes |  | Paths to ltx files or folders with ltx files |",
  "| \`-c, --check\` |  |  | Run formatter in check mode |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli ltx verify\`",
  "",
  "Command for verification of ltx and ini files",
  "",
  "\`\`\`txt",
  "xrf-cli ltx verify [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to a folder with ltx files, or to a game installation root holding fsgame.ltx |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "<!-- ANCHOR_END: commands -->",
]
`;

exports[`docs generate should render ogf.md 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# OGF commands",
  "",
  "<!-- ANCHOR: commands -->",
  "",
  "## \`xrf-cli ogf info\`",
  "",
  "Command to print information about provided ogf file",
  "",
  "\`\`\`txt",
  "xrf-cli ogf info [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to ogf file |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli ogf patch-motion-refs\`",
  "",
  "Command to rewrite motion refs of provided ogf file",
  "",
  "\`\`\`txt",
  "xrf-cli ogf patch-motion-refs [OPTIONS] --path <path> --refs <refs>...",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to ogf file |",
  "| \`-d, --dest <dest>\` |  |  | Path to resulting ogf file, defaults to in place rewrite of the source file |",
  "| \`-r, --refs <refs>...\` | yes |  | Motion refs to store in the ogf file |",
  "| \`--dry-run\` |  |  | Validate the rewrite and report the result without writing any file |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli ogf patch-texture-refs\`",
  "",
  "Command to rename a texture reference of provided ogf file",
  "",
  "\`\`\`txt",
  "xrf-cli ogf patch-texture-refs [OPTIONS] --path <path> --from <from> --to <to>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to ogf file |",
  "| \`-d, --dest <dest>\` |  |  | Path to resulting ogf file, defaults to in place rewrite of the source file |",
  "| \`--from <from>\` | yes |  | Texture reference to rename, matched exactly |",
  "| \`--to <to>\` | yes |  | Texture reference to write in its place |",
  "| \`--dry-run\` |  |  | Validate the change and report the result without writing any file |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli ogf verify\`",
  "",
  "Command to verify ogf visuals can be packed for rendering",
  "",
  "\`\`\`txt",
  "xrf-cli ogf verify [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to an ogf file or a directory to sweep |",
  "| \`--root <root>...\` |  |  | Additional root searched for textures after the visual's own tree, repeatable |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "<!-- ANCHOR_END: commands -->",
]
`;

exports[`docs generate should render omf.md 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# OMF commands",
  "",
  "<!-- ANCHOR: commands -->",
  "",
  "## \`xrf-cli omf duplicate-motion\`",
  "",
  "Command to copy a motion of provided omf file under a new name",
  "",
  "\`\`\`txt",
  "xrf-cli omf duplicate-motion [OPTIONS] --path <path> --from <from> --to <to>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to omf file |",
  "| \`-d, --dest <dest>\` |  |  | Path to resulting omf file, defaults to in place rewrite of the source file |",
  "| \`--from <from>\` | yes |  | Motion to copy, matched exactly |",
  "| \`--to <to>\` | yes |  | Name to give the copy |",
  "| \`--play-once\` |  |  | Clear looping on the copy so it plays once and ends |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli omf filter-motions\`",
  "",
  "Command to keep only selected motions of provided omf file",
  "",
  "\`\`\`txt",
  "xrf-cli omf filter-motions [OPTIONS] --path <path> --dest <dest>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to omf file |",
  "| \`-d, --dest <dest>\` | yes |  | Path to resulting omf file |",
  "| \`-k, --keep <keep>...\` |  |  | Exact motion names to keep |",
  "| \`--keep-prefix <keep-prefix>...\` |  |  | Keep motions whose name starts with provided prefix |",
  "| \`--dry-run\` |  |  | Validate the change and report the result without writing any file |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli omf info\`",
  "",
  "Command to print information about provided omf file",
  "",
  "\`\`\`txt",
  "xrf-cli omf info [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to ogf file |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli omf rename-motions\`",
  "",
  "Command to rename motions of provided omf file",
  "",
  "\`\`\`txt",
  "xrf-cli omf rename-motions [OPTIONS] --path <path> --dest <dest> --map <map>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to omf file |",
  "| \`-d, --dest <dest>\` | yes |  | Path to resulting omf file |",
  "| \`-m, --map <map>\` | yes |  | Path to JSON object mapping existing motion names to new ones |",
  "| \`--strict\` |  |  | Require every motion in the file to be covered by the map |",
  "| \`--dry-run\` |  |  | Validate the change and report the result without writing any file |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli omf repack\`",
  "",
  "Command to repack provided omf file or directory of omf files",
  "",
  "\`\`\`txt",
  "xrf-cli omf repack [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to omf file or directory containing omf files |",
  "| \`-d, --dest <dest>\` |  |  | Path to resulting omf file, not applicable when verifying a directory |",
  "| \`--verify\` |  |  | Verify that repacked bytes match the source file instead of writing output |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "<!-- ANCHOR_END: commands -->",
]
`;

exports[`docs generate should render particle.md 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# Particle commands",
  "",
  "<!-- ANCHOR: commands -->",
  "",
  "## \`xrf-cli particle info\`",
  "",
  "Command to print information about provided particle file",
  "",
  "\`\`\`txt",
  "xrf-cli particle info [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to particle file |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli particle pack\`",
  "",
  "Command to pack unpacked particle files into single particle.xr",
  "",
  "\`\`\`txt",
  "xrf-cli particle pack [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to unpacked particle file folder |",
  "| \`-d, --dest <dest>\` |  | \`unpacked\` | Path to resulting packed *.xr file |",
  "| \`-f, --force\` |  |  | Whether existing packed particle should be pruned if destination folder exists |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli particle repack\`",
  "",
  "Command to repack provided particle.xr into another file",
  "",
  "\`\`\`txt",
  "xrf-cli particle repack [OPTIONS] --path <path> --dest <dest>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to particle file |",
  "| \`-d, --dest <dest>\` | yes |  | Path to resulting particle file |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli particle re-unpack\`",
  "",
  "Command to re-unpack provided particle directory into another directory",
  "",
  "\`\`\`txt",
  "xrf-cli particle re-unpack [OPTIONS] --path <path> --dest <dest>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to unpacked particle directory |",
  "| \`-d, --dest <dest>\` | yes |  | Path to resulting unpacked particle |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli particle unpack\`",
  "",
  "Command to unpack provided particle.xr into separate files",
  "",
  "\`\`\`txt",
  "xrf-cli particle unpack [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to particle.xr file |",
  "| \`-d, --dest <dest>\` |  | \`unpacked\` | Path to folder for exporting |",
  "| \`-f, --force\` |  |  | Whether existing unpacked data should be pruned if destination folder exists |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli particle verify\`",
  "",
  "Command to verify provided particle file",
  "",
  "\`\`\`txt",
  "xrf-cli particle verify [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to particle.xr file |",
  "| \`-u, --unpacked\` |  |  | Whether should verify unpacked particle |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "<!-- ANCHOR_END: commands -->",
]
`;

exports[`docs generate should render spawn.md 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# Spawn commands",
  "",
  "<!-- ANCHOR: commands -->",
  "",
  "## \`xrf-cli spawn info\`",
  "",
  "Command to print information about provided spawn file",
  "",
  "\`\`\`txt",
  "xrf-cli spawn info [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to spawn file |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli spawn pack\`",
  "",
  "Command to pack unpacked spawn files into single *.spawn",
  "",
  "\`\`\`txt",
  "xrf-cli spawn pack [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to unpacked spawn file folder |",
  "| \`-d, --dest <dest>\` |  | \`unpacked\` | Path to resulting packed *.spawn file |",
  "| \`-f, --force\` |  |  | Whether existing packed spawn should be pruned if destination folder exists |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli spawn repack\`",
  "",
  "Command to repack provided *.spawn into another file",
  "",
  "\`\`\`txt",
  "xrf-cli spawn repack [OPTIONS] --path <path> --dest <dest>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to *.spawn file |",
  "| \`-d, --dest <dest>\` | yes |  | Path to resulting *.spawn file |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli spawn unpack\`",
  "",
  "Command to unpack provided *.spawn into separate files",
  "",
  "\`\`\`txt",
  "xrf-cli spawn unpack [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to *.spawn file |",
  "| \`-d, --dest <dest>\` |  | \`unpacked\` | Path to folder for exporting |",
  "| \`-f, --force\` |  |  | Whether existing unpacked data should be pruned if destination folder exists |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli spawn verify\`",
  "",
  "Command to verify provided spawn file",
  "",
  "\`\`\`txt",
  "xrf-cli spawn verify [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to spawn file |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "<!-- ANCHOR_END: commands -->",
]
`;

exports[`docs generate should render texture.md 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# Texture commands",
  "",
  "<!-- ANCHOR: commands -->",
  "",
  "## \`xrf-cli texture crop-dds\`",
  "",
  "Command to crop a rectangular region out of a dds file into a new dds file",
  "",
  "\`\`\`txt",
  "xrf-cli texture crop-dds [OPTIONS] --source <source> --output <output> --x <x> --y <y> --width <width> --height <height>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`--source <source>\` | yes |  | Path to the dds file to read the region from |",
  "| \`--output <output>\` | yes |  | Path of the dds file to write |",
  "| \`--x <x>\` | yes |  | Left edge of the region, in pixels |",
  "| \`--y <y>\` | yes |  | Top edge of the region, in pixels |",
  "| \`--width <width>\` | yes |  | Width of the region, in pixels |",
  "| \`--height <height>\` | yes |  | Height of the region, in pixels |",
  "| \`--fit-width <fit-width>\` |  |  | Scale the cropped region to this width, preserving aspect and letterboxing |",
  "| \`--fit-height <fit-height>\` |  |  | Scale the cropped region to this height, preserving aspect and letterboxing |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli texture info-dds\`",
  "",
  "Command to print information about provided dds file",
  "",
  "\`\`\`txt",
  "xrf-cli texture info-dds [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to dds file |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli texture pack-equipment-icons\`",
  "",
  "Command to pack dds icons into single element",
  "",
  "\`\`\`txt",
  "xrf-cli texture pack-equipment-icons [OPTIONS] --system-ltx <system-ltx> --source <source> --output <output>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`--system-ltx <system-ltx>\` | yes |  | Path to system ltx file or root folder with ltx files |",
  "| \`--source <source>\` | yes |  | Path to source folder with section icons |",
  "| \`--output <output>\` | yes |  | Path to output dds file |",
  "| \`--gamedata <gamedata>\` |  |  | Path to gamedata folder for resources usage |",
  "| \`--strict\` |  |  | Turn on strict mode |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli texture pack-texture-description\`",
  "",
  "Command to pack texture description xml",
  "",
  "\`\`\`txt",
  "xrf-cli texture pack-texture-description [OPTIONS] --description <description> --base <base>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`--description <description>\` | yes |  | Path to XML file describing textures |",
  "| \`--base <base>\` | yes |  | Path to base where search for described files |",
  "| \`--output <output>\` |  |  | Path to directory where output dds files |",
  "| \`--file <file>...\` |  |  | Name of a described file to pack, repeatable; packs every described file if omitted |",
  "| \`--strict\` |  |  | Turn on strict unpack mode |",
  "| \`--parallel\` |  |  | Turn on parallel mode for pack operations |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli texture unpack-equipment-icons\`",
  "",
  "Command to unpack dds icons into multiple icons",
  "",
  "\`\`\`txt",
  "xrf-cli texture unpack-equipment-icons [OPTIONS] --system-ltx <system-ltx> --source <source> --output <output>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`--system-ltx <system-ltx>\` | yes |  | Path to system ltx file or root folder with ltx files |",
  "| \`--source <source>\` | yes |  | Path to source dds file |",
  "| \`--output <output>\` | yes |  | Path to output folder for sections icons |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli texture unpack-texture-description\`",
  "",
  "Command to unpack dds icons into multiple icons",
  "",
  "\`\`\`txt",
  "xrf-cli texture unpack-texture-description [OPTIONS] --description <description> --base <base>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`--description <description>\` | yes |  | Path to XML file describing textures |",
  "| \`--base <base>\` | yes |  | Path to base where search for described files |",
  "| \`--output <output>\` |  |  | Path to output folder for icons |",
  "| \`--file <file>...\` |  |  | Name of a described file to unpack, repeatable; unpacks every described file if omitted |",
  "| \`--strict\` |  |  | Turn on strict unpack mode |",
  "| \`--parallel\` |  |  | Turn on parallel unpack mode |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli texture verify-equipment-icons\`",
  "",
  "Command to check inventory icon grid rects for overlaps",
  "",
  "\`\`\`txt",
  "xrf-cli texture verify-equipment-icons [OPTIONS] --system-ltx <system-ltx>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`--system-ltx <system-ltx>\` | yes |  | Path to system ltx file or root folder with ltx files |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "<!-- ANCHOR_END: commands -->",
]
`;

exports[`docs generate should render thm.md 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# THM commands",
  "",
  "<!-- ANCHOR: commands -->",
  "",
  "## \`xrf-cli thm patch-bump\`",
  "",
  "Command to repoint the bump texture reference of provided thm file",
  "",
  "\`\`\`txt",
  "xrf-cli thm patch-bump [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to thm file |",
  "| \`-d, --dest <dest>\` |  |  | Path to resulting thm file, defaults to in place rewrite of the source file |",
  "| \`--to <to>\` |  |  | Bump texture reference to write, engine style without extension, for example 'wpn\\wpn_pm\\wpn_pm_bump' |",
  "| \`--off\` |  |  | Declare no bump at all, clearing the mode and the name; use for a bump that does not exist and is not going to |",
  "| \`--dry-run\` |  |  | Validate the change and report the result without writing any file |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "<!-- ANCHOR_END: commands -->",
]
`;

exports[`docs generate should render translation.md 1`] = `
[
  "<!-- This file is generated by \`xrf-cli docs generate\`. Do not edit manually. -->",
  "",
  "# Translation commands",
  "",
  "<!-- ANCHOR: commands -->",
  "",
  "## \`xrf-cli translation build\`",
  "",
  "Command to build translation files into gamedata",
  "",
  "\`\`\`txt",
  "xrf-cli translation build [OPTIONS] --path <path>... --output <output>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>...\` | yes |  | Root holding translation sources, or one source file. Repeat to layer roots, highest priority first |",
  "| \`--source <source>\` |  | \`containing-installation\` | How to read the path: auto treats it as an installation only when it declares one, directory ignores any declaration, installation requires one, containing-installation searches parent directories for one. Possible values: \`auto\`, \`directory\`, \`installation\`, \`containing-installation\`. |",
  "| \`--prefix <prefix>\` |  |  | Limit to one logical subtree, such as translations |",
  "| \`-o, --output <output>\` | yes |  | Path to output translation |",
  "| \`-l, --language <language>\` |  | \`all\` | Target language to translate |",
  "| \`--no-sort\` |  |  | Preserve source order instead of sorting dynamic translation files |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli translation initialize\`",
  "",
  "Command to initialize translation files",
  "",
  "\`\`\`txt",
  "xrf-cli translation initialize [OPTIONS] --path <path>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>\` | yes |  | Path to translation folder |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli translation parse\`",
  "",
  "Command to parse xml translations into json sources",
  "",
  "\`\`\`txt",
  "xrf-cli translation parse [OPTIONS] --path <path>... --language <language> --output <output>",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>...\` | yes |  | Root holding raw xml translations. Repeat to layer roots, highest priority first |",
  "| \`--source <source>\` |  | \`containing-installation\` | How to read the path: auto treats it as an installation only when it declares one, directory ignores any declaration, installation requires one, containing-installation searches parent directories for one. Possible values: \`auto\`, \`directory\`, \`installation\`, \`containing-installation\`. |",
  "| \`--prefix <prefix>\` |  |  | Limit to one logical subtree, such as configs\\text\\eng |",
  "| \`-l, --language <language>\` | yes |  | Language every entry read by this run is filed under. Raw xml carries no language, so it is declared rather than guessed |",
  "| \`-o, --output <output>\` | yes |  | Directory the json sources are written to, merging with any already there |",
  "| \`--file <file>\` |  |  | Restrict the run to one string table, by file name |",
  "| \`--overwrite\` |  |  | Replace existing text that differs, instead of keeping what is already there |",
  "| \`--dry-run\` |  |  | Report what would be written without writing it |",
  "| \`--strict\` |  |  | Answer with a check failure when anything was unreadable or off schema |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "## \`xrf-cli translation verify\`",
  "",
  "Command to verify translation files integrity",
  "",
  "\`\`\`txt",
  "xrf-cli translation verify [OPTIONS] --path <path>...",
  "\`\`\`",
  "",
  "| Option | Required | Default | Description |",
  "| ------ | -------- | ------- | ----------- |",
  "| \`-p, --path <path>...\` | yes |  | Root holding translation sources, or one source file. Repeat to layer roots, highest priority first |",
  "| \`--source <source>\` |  | \`containing-installation\` | How to read the path: auto treats it as an installation only when it declares one, directory ignores any declaration, installation requires one, containing-installation searches parent directories for one. Possible values: \`auto\`, \`directory\`, \`installation\`, \`containing-installation\`. |",
  "| \`--prefix <prefix>\` |  |  | Limit to one logical subtree, such as translations |",
  "| \`-l, --language <language>\` |  | \`all\` | Target language to translate |",
  "| \`--strict\` |  |  | Fail with non 0 error code if translation are missing |",
  "| \`-s, --silent\` |  |  | Turn off logging |",
  "| \`-v, --verbose\` |  |  | Turn on verbose logging |",
  "| \`--json\` |  |  | Write the run's JSON report to stdout, moving human output to stderr |",
  "| \`--report <PATH>\` |  |  | Write the run's JSON report to a file |",
  "",
  "<!-- ANCHOR_END: commands -->",
]
`;

exports[`docs generate should write the expected pages 1`] = `
[
  {
    "path": "docs/README.md",
    "sha256": "7b953bf9a749e0f6b5f99ec46471142ee67bd5e076a38a549726800d6451a5fe",
    "size": 2739,
  },
  {
    "path": "docs/archive.md",
    "sha256": "a67a22aa7954ce5992a8401da64dd7b637e02f1f37c6e671135e862fe9e16810",
    "size": 5819,
  },
  {
    "path": "docs/dialog.md",
    "sha256": "a3d42f7b0b46a139b4699493e45aa10c9c989e10f566395658ff29e009c8fc80",
    "size": 1280,
  },
  {
    "path": "docs/docs.md",
    "sha256": "109f601e4a0358f8f5036ba19b884dc43c01d859a4afa88a0651be632541a885",
    "size": 834,
  },
  {
    "path": "docs/externs.md",
    "sha256": "ceed6ee92388eb728cd534f999d804010c49c955e0fe97be29879c7861b6f8bf",
    "size": 1150,
  },
  {
    "path": "docs/gamedata.md",
    "sha256": "47ab930cb56879938caf65723b5e7958bf96cc248fb1f4e59e2a5a48a1c18d1d",
    "size": 2331,
  },
  {
    "path": "docs/ltx.md",
    "sha256": "1f140f874f4d0dad9c9f60aa7d83612dfd2518e738aecdddafa9333c25d3dc0f",
    "size": 1352,
  },
  {
    "path": "docs/ogf.md",
    "sha256": "4e5bedd4ed535c87c1a6bb07f34770affd4c6580f57a88777461bc0ac56661a3",
    "size": 3134,
  },
  {
    "path": "docs/omf.md",
    "sha256": "f852867c096a20bcac195302a34ce272cc108f456c0ac91695bff54d5cd3093b",
    "size": 4125,
  },
  {
    "path": "docs/particle.md",
    "sha256": "4600f089a99cd6b4295520d366d8b384261547762d5a7c41544f050e5af46092",
    "size": 4107,
  },
  {
    "path": "docs/profile.md",
    "sha256": "b679dcaf5c3b67a523e3e7fe954ccff8dcf0e4aedb40df0fa1b6e8bd29121d69",
    "size": 1024,
  },
  {
    "path": "docs/spawn.md",
    "sha256": "facf9c9ad32c58a712cd130c27f926a2460c697ba42ff34e632009d26e81bc21",
    "size": 3294,
  },
  {
    "path": "docs/texture.md",
    "sha256": "9f8de421bfec843b4f2d4b7b3c8a3c904da318c91c53f40cbec23386e328ac21",
    "size": 6260,
  },
  {
    "path": "docs/thm.md",
    "sha256": "1d53459b0493afb70fa2e0609d0cbdc7b5957b131fbcfbbb2d3c0a51b9a95098",
    "size": 1167,
  },
  {
    "path": "docs/translation.md",
    "sha256": "5370622a38fa337fae4061e545defa288bea4dd01c467b92cc661144dbbd6546",
    "size": 4947,
  },
  {
    "path": "drifted/README.md",
    "sha256": "35db1bffa5ee9c9e44e31d2688bf494f0087c6e21f4d2e39393914acd793cae4",
    "size": 25,
  },
]
`;
